# Pico_UART_Terminal

./: CMakeLists.txt  README.md  UARTTerminal.c
src/: gameshared.h  gpu.c  gpu.h  interface.c  interface.h  mainLoop.c  mainLoop.h  terminal.c  terminal.h
src/interface/: ili9341.c
